@@ -123,18 +123,16 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * <p>
      * From Jython 2.7 on, {@code PyObject}s must not have finalizers directly. If a finalizer,
      * a.k.a. {@code __del__} is needed, follow the instructions in the documentation of
      * {@link org.python.core.finalization.FinalizablePyObject}.
-     * </p>
      * <p>
-     * Note that this empty finalizer implementation is optimized away by the JVM (See
-     * {@link http://www.javaspecialists.eu/archive/Issue170.html}). So {@code PyObject}s are not
-     * expensively treated as finalizable objects by the Java-GC. Its single intention is to prevent
-     * subclasses from having Java-style finalizers.
-     * </p>
+     * Note that this empty finalizer implementation is optimized away by the JVM. (See <a
+     * href=http://www.javaspecialists.eu/archive/Issue170.html>Discovering Objects with Non-trivial
+     * Finalizers</a>). So {@code PyObject}s are not expensively treated as finalizable objects by
+     * the Java-GC. Its single intention is to prevent subclasses from having Java-style finalizers.
      */
+    @SuppressWarnings("deprecation") // See the Javadoc
     @Override
     protected final void finalize() throws Throwable {}
 
@@ -187,16 +185,14 @@ public class PyObject implements Serializable {
         ThreadContext.initializingProxy.set(new Object[] {this});
         try {
             try {
-                proxy = (PyProxy) c.newInstance();
-            } catch (java.lang.InstantiationException e) {
+                proxy = (PyProxy) c.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | NoSuchMethodException e) {
                 Class<?> sup = c.getSuperclass();
-                String msg = "Default constructor failed for Java superclass";
+                String msg = "Default constructor failed/missing for Java superclass";
                 if (sup != null) {
                     msg += " " + sup.getName();
                 }
                 throw Py.TypeError(msg);
-            } catch (NoSuchMethodError nsme) {
-                throw Py.TypeError("constructor requires arguments");
             } catch (Exception exc) {
                 throw Py.JavaError(exc);
             }
@@ -215,15 +211,21 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Equivalent to the standard Python __repr__ method. This method should not typically need to
-     * be overrriden. The easiest way to configure the string representation of a
-     * <code>PyObject</code> is to override the standard Java <code>toString</code> method.
+     * Equivalent to the standard Python <code>__repr__</code> method. Each sub-class of
+     * <code>PyObject</code> is likely to re-define this method to provide for its own reproduction.
      **/
     /*
-     * counter-intuitively exposing this as __str__, otherwise stack overflow occurs during
-     * regression testing.
+     * The effect of exposing __repr__ as __str__ is that a Python call to o.__str__() will land
+     * here. (A Java call to o.__str__() lands here too because __str__ is defined to call
+     * __repr__.) This will continue to be true in any sub-class that does not expose a __str__ of
+     * its own. (Such a class should override Java __str__ to call the method exposed as Python
+     * __str__.) Note that we expose a non-final method, therefore in a class that (Java-)overrides
+     * __repr__, Python (and Java) calls like o.__str__() will land on the overridden __repr__.
+     *
+     * This design, though long-standing, has caused confusion to the implementors of types, and
+     * seems to make *Derived.java classes more complicated. We should seek a more transparent
+     * design.
      */
-    // XXX: more detail for this comment is needed.
     @ExposedMethod(names = "__str__", doc = BuiltinDocs.object___str___doc)
     public PyString __repr__() {
         return new PyString(toString());
@@ -253,9 +255,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Equivalent to the standard Python __str__ method. This method should not typically need to be
-     * overridden. The easiest way to configure the string representation of a <code>PyObject</code>
-     * is to override the standard Java <code>toString</code> method.
+     * Equivalent to the standard Python __str__ method. The default implementation (in
+     * <code>PyObject</code>) calls {@link #__repr__()}, making it unnecessary to override
+     * <code>__str__</code> in sub-classes of <code>PyObject</code> where both forms are the same. A
+     * common choice is to provide the same implementation to <code>__str__</code> and
+     * <code>toString</code>, for consistency in the printed form of objects between Python and
+     * Java.
      **/
     public PyString __str__() {
         return __repr__();
@@ -532,8 +537,8 @@ public class PyObject implements Serializable {
             }
             for (String keyword : keywords) {
                 if (kwargs.__finditem__(keyword) != null) {
-                    throw Py.TypeError(name + "got multiple values for keyword argument '"
-                            + keyword + "'");
+                    throw Py.TypeError(
+                            name + "got multiple values for keyword argument '" + keyword + "'");
                 }
             }
             argslen += kwargs.__len__();
@@ -686,7 +691,7 @@ public class PyObject implements Serializable {
      *
      * @param key the key to lookup in this container.
      * @return the value corresponding to that key.
-     * @exception Py.KeyError if the key is not found.
+     * @throws PyException {@code KeyError} if the key is not found.
      *
      * @see #__finditem__(int)
      **/
@@ -704,7 +709,7 @@ public class PyObject implements Serializable {
      *
      * @param key the key to lookup in this container.
      * @return the value corresponding to that key.
-     * @exception Py.KeyError if the key is not found.
+     * @throws PyException {@code KeyError} if the key is not found.
      *
      * @see #__finditem__(PyObject)
      **/
@@ -760,7 +765,7 @@ public class PyObject implements Serializable {
      * Equivalent to the standard Python __delitem__ method.
      *
      * @param key the key to be removed from the container
-     * @exception Py.KeyError if the key is not found in the container
+     * @throws PyException {@code KeyError} if the key is not found in the container
      **/
     public void __delitem__(PyObject key) {
         throw Py.TypeError(String.format("'%.200s' object doesn't support item deletion",
@@ -773,7 +778,7 @@ public class PyObject implements Serializable {
      * appropriate args. The only reason to override this method is for performance.
      *
      * @param key the key who will be removed - <b> must be an interned string </b>.
-     * @exception Py.KeyError if the key is not found in the container
+     * @throws PyException {@code KeyError} if the key is not found in the container
      *
      * @see #__delitem__(PyObject)
      **/
@@ -822,7 +827,7 @@ public class PyObject implements Serializable {
      * </pre> When iterating over a python sequence from java code, it should be done with code like
      * this: <pre>
      * for (PyObject item : seq.asIterable()) {
-     *     // Do somting with item
+     *     // Do something with item
      * }
      * </pre>
      *
@@ -889,7 +894,7 @@ public class PyObject implements Serializable {
      *
      * <b>Warning: name must be an interned string!</b>
      *
-     * @param name the name to lookup in this namespace <b> must be an interned string </b>.
+     * @param name the name to lookup in this namespace <b>must be an interned string</b>.
      * @return the value corresponding to name or null if name is not found
      **/
     public final PyObject __findattr__(String name) {
@@ -912,9 +917,9 @@ public class PyObject implements Serializable {
      * methods have a clear policy for failed lookups.
      *
      * @return The looked up value. May return null if the attribute is not found
-     * @throws PyException(AttributeError) if the attribute is not found. This is not mandatory,
-     *             null can be returned if it fits the implementation better, or for performance
-     *             reasons.
+     * @throws PyException {@code AttributeError} if the attribute is not found. This is not
+     *             mandatory, null can be returned if it fits the implementation better, or for
+     *             performance reasons.
      */
     public PyObject __findattr_ex__(String name) {
         return object___findattr__(name);
@@ -928,7 +933,7 @@ public class PyObject implements Serializable {
      *
      * @param name the name to lookup in this namespace
      * @return the value corresponding to name
-     * @exception Py.AttributeError if the name is not found.
+     * @throws PyException {@code AttributeError} if the name is not found.
      *
      * @see #__findattr_ex__(String)
      **/
@@ -944,7 +949,7 @@ public class PyObject implements Serializable {
      *
      * @param name the name to lookup in this namespace <b> must be an interned string </b>.
      * @return the value corresponding to name
-     * @exception Py.AttributeError if the name is not found.
+     * @throws PyException {@code AttributeError} if the name is not found.
      *
      * @see #__findattr__(java.lang.String)
      **/
@@ -972,7 +977,7 @@ public class PyObject implements Serializable {
      * Equivalent to the standard Python __setattr__ method. This method can not be overridden.
      *
      * @param name the name to lookup in this namespace
-     * @exception Py.AttributeError if the name is not found.
+     * @throws PyException {@code AttributeError} if the name is not found.
      *
      * @see #__setattr__(java.lang.String, PyObject)
      **/
@@ -997,7 +1002,7 @@ public class PyObject implements Serializable {
      * Equivalent to the standard Python __delattr__ method. This method can not be overridden.
      *
      * @param name the name to which will be removed
-     * @exception Py.AttributeError if the name doesn't exist
+     * @throws PyException {@code AttributeError} if the name doesn't exist
      *
      * @see #__delattr__(java.lang.String)
      **/
@@ -1011,7 +1016,7 @@ public class PyObject implements Serializable {
      * appropriate args. The only reason to override this method is for performance.
      *
      * @param name the name which will be removed - <b> must be an interned string </b>.
-     * @exception Py.AttributeError if the name doesn't exist
+     * @throws PyException {@code AttributeError} if the name doesn't exist
      *
      * @see #__delattr__(PyString)
      **/
@@ -1019,7 +1024,13 @@ public class PyObject implements Serializable {
         object___delattr__(name);
     }
 
-    // Used by import logic.
+    /**
+     * This is a hook called during the import mechanism when the target module is (or may be) a
+     * sub-module of this object.
+     *
+     * @param name relative to this object <b>must be an interned string</b>.
+     * @return corresponding value (a module or package) or {@code null} if not found
+     */
     protected PyObject impAttr(String name) {
         return __findattr__(name);
     }
@@ -1196,7 +1207,8 @@ public class PyObject implements Serializable {
      * Equivalent to the standard Python __cmp__ method.
      *
      * @param other the object to compare this with.
-     * @return -1 if this < o; 0 if this == o; +1 if this > o; -2 if no comparison is implemented
+     * @return -1 if {@code this<o}; 0 if {@code this==o}; +1 if {@code this>o}; -2 if no comparison
+     *         is implemented
      **/
     public int __cmp__(PyObject other) {
         return -2;
@@ -1266,7 +1278,7 @@ public class PyObject implements Serializable {
      * Implements cmp(this, other)
      *
      * @param o the object to compare this with.
-     * @return -1 if this < 0; 0 if this == o; +1 if this > o
+     * @return -1 if {@code this<0}; 0 if {@code this==o}; +1 if {@code this>o}
      **/
     public final int _cmp(PyObject o) {
         if (this == o) {
@@ -1440,7 +1452,7 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this == other</code>.
+     * Implements the Python expression {@code this == other}.
      *
      * @param o the object to compare this with.
      * @return the result of the comparison
@@ -1477,7 +1489,7 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this != other</code>.
+     * Implements the Python expression {@code this != other}.
      *
      * @param o the object to compare this with.
      * @return the result of the comparison
@@ -1514,7 +1526,7 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this &lt;= other</code>.
+     * Implements the Python expression {@code this <= other}.
      *
      * @param o the object to compare this with.
      * @return the result of the comparison
@@ -1551,7 +1563,7 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this &lt; other</code>.
+     * Implements the Python expression {@code this < other}.
      *
      * @param o the object to compare this with.
      * @return the result of the comparison
@@ -1588,7 +1600,7 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this &gt;= other</code>.
+     * Implements the Python expression {@code this >= other}.
      *
      * @param o the object to compare this with.
      * @return the result of the comparison
@@ -1625,7 +1637,7 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this &gt; other</code>.
+     * Implements the Python expression {@code this > other}.
      *
      * @param o the object to compare this with.
      * @return the result of the comparison
@@ -1888,7 +1900,7 @@ public class PyObject implements Serializable {
      * Equivalent to the standard Python __index__ method.
      *
      * @return a PyInteger or PyLong
-     * @throws a Py.TypeError if not supported
+     * @throws PyException {@code TypeError} if not supported
      **/
     public PyObject __index__() {
         throw Py.TypeError(String.format("'%.200s' object cannot be interpreted as an index",
@@ -2042,11 +2054,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this + o2</code>.
+     * Implements the Python expression {@code this + o2}.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the add.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _add(PyObject o2) {
         PyType t1 = this.getType();
@@ -2058,12 +2071,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this + o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this + o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the add.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_add(PyObject o2) {
         PyObject x = __add__(o2);
@@ -2078,11 +2092,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this += o2</code>.
+     * Implements the Python expression {@code this += o2}.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the iadd.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _iadd(PyObject o2) {
         PyType t1 = this.getType();
@@ -2101,12 +2116,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this += o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this += o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the iadd.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_iadd(PyObject o2) {
         PyObject x = __iadd__(o2);
@@ -2147,11 +2163,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this - o2</code>
+     * Implements the Python expression {@code this - o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the sub.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _sub(PyObject o2) {
         PyType t1 = this.getType();
@@ -2163,12 +2180,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this - o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this - o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the sub.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_sub(PyObject o2) {
         PyObject x = __sub__(o2);
@@ -2183,11 +2201,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this -= o2</code>
+     * Implements the Python expression {@code this -= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the isub.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _isub(PyObject o2) {
         PyType t1 = this.getType();
@@ -2206,12 +2225,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this -= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this -= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the isub.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_isub(PyObject o2) {
         PyObject x = __isub__(o2);
@@ -2252,11 +2272,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this * o2</code>.
+     * Implements the Python expression {@code this * o2}.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the mul.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _mul(PyObject o2) {
         PyType t1 = this.getType();
@@ -2268,12 +2289,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this * o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this * o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the mul.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_mul(PyObject o2) {
         PyObject x = __mul__(o2);
@@ -2288,11 +2310,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this *= o2</code>.
+     * Implements the Python expression {@code this *= o2}.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the imul.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _imul(PyObject o2) {
         PyType t1 = this.getType();
@@ -2311,12 +2334,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this *= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this *= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the imul.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_imul(PyObject o2) {
         PyObject x = __imul__(o2);
@@ -2357,11 +2381,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this / o2</code>
+     * Implements the Python expression {@code this / o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the div.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _div(PyObject o2) {
         if (Options.Qnew) {
@@ -2376,12 +2401,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this / o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this / o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the div.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_div(PyObject o2) {
         PyObject x = __div__(o2);
@@ -2396,11 +2422,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this /= o2</code>
+     * Implements the Python expression {@code this /= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the idiv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _idiv(PyObject o2) {
         if (Options.Qnew) {
@@ -2422,12 +2449,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this /= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this /= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the idiv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_idiv(PyObject o2) {
         PyObject x = __idiv__(o2);
@@ -2468,11 +2496,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this // o2</code>
+     * Implements the Python expression {@code this // o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the floordiv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _floordiv(PyObject o2) {
         PyType t1 = this.getType();
@@ -2484,12 +2513,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this // o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this // o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the floordiv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_floordiv(PyObject o2) {
         PyObject x = __floordiv__(o2);
@@ -2504,11 +2534,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this //= o2</code>
+     * Implements the Python expression {@code this //= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ifloordiv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _ifloordiv(PyObject o2) {
         PyType t1 = this.getType();
@@ -2527,12 +2558,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this //= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this //= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ifloordiv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_ifloordiv(PyObject o2) {
         PyObject x = __ifloordiv__(o2);
@@ -2573,11 +2605,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this / o2</code>
+     * Implements the Python expression {@code this / o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the truediv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _truediv(PyObject o2) {
         PyType t1 = this.getType();
@@ -2589,12 +2622,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this / o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this / o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the truediv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_truediv(PyObject o2) {
         PyObject x = __truediv__(o2);
@@ -2609,11 +2643,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this /= o2</code>
+     * Implements the Python expression {@code this /= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the itruediv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _itruediv(PyObject o2) {
         PyType t1 = this.getType();
@@ -2632,12 +2667,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this /= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this /= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the itruediv.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_itruediv(PyObject o2) {
         PyObject x = __itruediv__(o2);
@@ -2678,11 +2714,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this % o2</code>
+     * Implements the Python expression {@code this % o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the mod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _mod(PyObject o2) {
         PyType t1 = this.getType();
@@ -2694,12 +2731,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this % o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this % o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the mod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_mod(PyObject o2) {
         PyObject x = __mod__(o2);
@@ -2714,11 +2752,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this %= o2</code>
+     * Implements the Python expression {@code this %= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the imod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _imod(PyObject o2) {
         PyType t1 = this.getType();
@@ -2737,12 +2776,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this %= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this %= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the imod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_imod(PyObject o2) {
         PyObject x = __imod__(o2);
@@ -2783,11 +2823,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this divmod o2</code>
+     * Implements the Python expression {@code this divmod o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the divmod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _divmod(PyObject o2) {
         PyType t1 = this.getType();
@@ -2799,12 +2840,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this divmod o2</code> when this and o2 have the same
-     * type or are builtin types.
+     * Implements the Python expression {@code this divmod o2} when this and o2 have the same type
+     * or are builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the divmod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_divmod(PyObject o2) {
         PyObject x = __divmod__(o2);
@@ -2819,11 +2861,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this divmod= o2</code>
+     * Implements the Python expression {@code this divmod= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the idivmod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _idivmod(PyObject o2) {
         PyType t1 = this.getType();
@@ -2842,12 +2885,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this divmod= o2</code> when this and o2 have the same
-     * type or are builtin types.
+     * Implements the Python expression {@code this divmod= o2} when this and o2 have the same type
+     * or are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the idivmod.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_idivmod(PyObject o2) {
         PyObject x = __idivmod__(o2);
@@ -2888,11 +2932,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this ** o2</code>
+     * Implements the Python expression {@code this ** o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the pow.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _pow(PyObject o2) {
         PyType t1 = this.getType();
@@ -2904,12 +2949,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this ** o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this ** o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the pow.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_pow(PyObject o2) {
         PyObject x = __pow__(o2);
@@ -2924,11 +2970,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this **= o2</code>
+     * Implements the Python expression {@code this **= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ipow.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _ipow(PyObject o2) {
         PyType t1 = this.getType();
@@ -2947,12 +2994,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this **= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this **= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ipow.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_ipow(PyObject o2) {
         PyObject x = __ipow__(o2);
@@ -2993,11 +3041,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this << o2</code>
+     * Implements the Python expression {@code this << o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the lshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _lshift(PyObject o2) {
         PyType t1 = this.getType();
@@ -3009,12 +3058,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this << o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this << o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the lshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_lshift(PyObject o2) {
         PyObject x = __lshift__(o2);
@@ -3029,11 +3079,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this <<= o2</code>
+     * Implements the Python expression {@code this <<= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ilshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _ilshift(PyObject o2) {
         PyType t1 = this.getType();
@@ -3052,12 +3103,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this <<= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this <<= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ilshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_ilshift(PyObject o2) {
         PyObject x = __ilshift__(o2);
@@ -3098,11 +3150,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this >> o2</code>
+     * Implements the Python expression {@code this >> o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the rshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _rshift(PyObject o2) {
         PyType t1 = this.getType();
@@ -3114,12 +3167,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this >> o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this >> o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the rshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_rshift(PyObject o2) {
         PyObject x = __rshift__(o2);
@@ -3134,11 +3188,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this >>= o2</code>
+     * Implements the Python expression {@code this >>= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the irshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _irshift(PyObject o2) {
         PyType t1 = this.getType();
@@ -3157,12 +3212,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this >>= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this >>= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the irshift.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_irshift(PyObject o2) {
         PyObject x = __irshift__(o2);
@@ -3203,11 +3259,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this & o2</code>
+     * Implements the Python expression {@code this & o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the and.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _and(PyObject o2) {
         PyType t1 = this.getType();
@@ -3219,12 +3276,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this & o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this & o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the and.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_and(PyObject o2) {
         PyObject x = __and__(o2);
@@ -3239,11 +3297,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this &= o2</code>
+     * Implements the Python expression {@code this &= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the iand.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _iand(PyObject o2) {
         PyType t1 = this.getType();
@@ -3262,12 +3321,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this &= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this &= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the iand.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_iand(PyObject o2) {
         PyObject x = __iand__(o2);
@@ -3308,11 +3368,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this | o2</code>
+     * Implements the Python expression {@code this | o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the or.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _or(PyObject o2) {
         PyType t1 = this.getType();
@@ -3324,12 +3385,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this | o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this | o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the or.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_or(PyObject o2) {
         PyObject x = __or__(o2);
@@ -3344,11 +3406,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this |= o2</code>
+     * Implements the Python expression {@code this |= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ior.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _ior(PyObject o2) {
         PyType t1 = this.getType();
@@ -3367,12 +3430,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this |= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this |= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ior.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_ior(PyObject o2) {
         PyObject x = __ior__(o2);
@@ -3413,11 +3477,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this ^ o2</code>
+     * Implements the Python expression {@code this ^ o2}
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the xor.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _xor(PyObject o2) {
         PyType t1 = this.getType();
@@ -3429,12 +3494,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this ^ o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this ^ o2} when this and o2 have the same type or are
+     * builtin types.
      *
      * @param o2 the object to perform this binary operation with.
      * @return the result of the xor.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_xor(PyObject o2) {
         PyObject x = __xor__(o2);
@@ -3449,11 +3515,12 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this ^= o2</code>
+     * Implements the Python expression {@code this ^= o2}
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ixor.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     public final PyObject _ixor(PyObject o2) {
         PyType t1 = this.getType();
@@ -3472,12 +3539,13 @@ public class PyObject implements Serializable {
     }
 
     /**
-     * Implements the Python expression <code>this ^= o2</code> when this and o2 have the same type
-     * or are builtin types.
+     * Implements the Python expression {@code this ^= o2} when this and o2 have the same type or
+     * are builtin types.
      *
      * @param o2 the object to perform this inplace binary operation with.
      * @return the result of the ixor.
-     * @exception Py.TypeError if this operation can't be performed with these operands.
+     * @throws PyException {@code TypeError} if this operation can't be performed with these
+     *             operands.
      **/
     final PyObject _basic_ixor(PyObject o2) {
         PyObject x = __ixor__(o2);
